# wasm-image-processing

./: Cargo.toml  README.md
src/: lib.rs
www/: index.html  package-lock.json  package.json
www/src/: App.css  App.tsx  index.css
www/src/components/: CropBar.tsx  ImageSpace.tsx
www/src/components/ImageSpace/: ImageSpace.module.css  ImageSpace.tsx
www/src/components/InputFile/: InputFile.module.css  InputFile.tsx
